# inspection

./: .gitignore  .gitmodules  .hgignore  Makefile  Makefile.include  README  README.md  SciTEDirectory.properties  factoids  id3inspector.cpp  meson.build  mpeginspector.cpp
.github/workflows/: cpp.yml  meson.yml
ape/: Makefile  apeinspector.cpp
asf/: Makefile  asfinspector.cpp
common/: 5th.h  Makefile  any_printing.h  buffer.h  common.h  date_time.h  explode.h  file_handling.h  getters.cpp  getters.h  getters.xml  guid.h  helper.cpp  helper.h  hexadecimal_strings.cpp  hexadecimal_strings.h  length.h  reader.cpp  reader.h  result.h  results.h  string_cast.cpp  string_cast.h  test.cpp  unicode.cpp  unicode.h  unknown_value_exception.h  update_type_library_path.py  value.h  value_printing.h  values.h
common/5th/: Makefile  buffer.h  getters.cpp  getters.h  length.h  result.h  test.cpp  unknown_value_exception.h  value.h  value_printing.h
common/getters/: 4th.cpp  4th.h  ASCII.xml  Buffers.xml  GUID_LittleEndian.xml  Microsoft_WaveFormat_FormatTag.getter
common/include/: any_printing.h  assertion.h  buffer.h  colors.h  date_time.h  exception_printing.h  explode.h  file_handling.h  getter_repository.h  getters.h  guid.h  helper.h  id3_de_unsynchronization_eager_filter.h  id3_helper.h  inspector.h  length.h  not_implemented_exception.h  output_operators.h  query.h  read_result.h  reader.h  result.h  string_cast.h  type.h  type_repository.h  unknown_value_exception.h  value.h  value_printing.h
common/source/: enumeration.cpp  enumeration.h  exception_printing.cpp  execution_context.cpp  execution_context.h  getter_descriptor.cpp  getter_descriptor.h  getter_repository.cpp  getters.cpp  guid.cpp  helper.cpp  id3_de_unsynchronization_eager_filter.cpp  inspector.cpp  internal_output_operators.h  output_operators.cpp  query.cpp  reader.cpp  string_cast.cpp  type.cpp  type.h  type_definition.cpp  type_definition.h  type_repository.cpp  value_printing.cpp  xml_helper.h  xml_puny_dom.cpp  xml_puny_dom.h
common/test/: test.cpp
common/types/: Microsoft_WaveFormat_FormatTag.type
data/: meson.build
data/examples/: 002_apev2tag  006_mpegstream_id3v1tag  011_id3_2.2_PIC_JPG  015_id3_2.3_UFID  016_id3_2.2_UFI  018_id3_2.3_APIC  021_id3_2.2_TCO_81  023_id3_2.4_TSOP  029_APE_2.5  030_ID3_2.3_TCON_too_short  032_ID3_2.3_TXXX_UCS-2_LE  045_ID3_1  051_ID3_2.3_COMM_bul_UCS-2_bom_be  052_ID3_2.3_COMM_deu_8859-1  (+18 more)
documentation/: BUILDING.md  FACTOIDS.md  HISTORY.md  TODO.md
examples/: 001_mpeg1_stream_ape_tag_id3v1_tag  003_mpeg1stream  004_id3v1tag  005_mpegstream_apev2tag  007_apev2tag_id3v1tag  008_id3_2.3_MCDI_unsynchronized  009_id3v2tag_mpeg1stream_apev2tag_id3v1tag  010_flac_with_picture_frame  011_id3_2.2_PIC_JPG  013_id3_2.4_padding  014_small_flacstream  017_id3_2.4_UFID  019_id3_2.3_RGAD  020_id3_2.2_PIC_PNG  022_id3_2.4_UTF-16_BE  024_id3_2.4_TCMP  025_id3_2.4_APIC  026_FLAC_SeekTable  027_ID3_2.4_PRIV  028_FLAC_VorbisComment  033_ID3_2.3_USLT_eng_ISO-8859-1_empty  037_DSStore_one_file  038_ID3_2.3_MCDI_binary  042_ID3_2.4_MCDI_binary  043_ID3_1.1_truncated_comment  046_ID3_1_full_comment  047_ID3_2.2_COM_eng  053_ID3_2.3_COMM_ger_8859-1  056_ID3_2.3_COMM_fre_8859-1  057_ID3_2.3_COMM_rus_UCS-2_bom_le  062_ID3_2.3_COMM_bogus  063_ID3_2.4_COMM_eng_8859-1  065_ID3_2.4_COMM_null  067_ID3_2.3_TEXT_8859-1  073_ID3_2.4_POPM  074_ID3_2.4_POPM_unknown_rating  077_ID3_2.4_POPM_counter_7_bytes  078_ID3_2.3_POPM  081_ID3_2.3_POPM_counter_3_bytes  083_ICO  (+1 more)
flac/: Makefile  flacinspector.cpp
general/: Makefile  generalinspector.cpp
id3/: Makefile  id3inspector.cpp
inspectors/: Makefile
libraries/: Makefile
mpeg/: Makefile  mpeginspector.cpp
riff/: Makefile  riffinspector.cpp
source/: meson.build
source/common/: meson.build
source/common/include/common/: assertion.h  buffer.h  colors.h  execution_context.h  from_string.h  getter_functor_adapter.h  getter_type_adapter.h  getters.h  i_getter_adapter.h  id3_de_unsynchronization_eager_filter.h  length.h  output_operators.h  query.h  read_result.h  result.h  type.h  type_repository.h  value.h
source/common/source/: exception_printing.cpp  execution_context.cpp  execution_context.h  getter_part_adapter.h  getters.cpp  guid.cpp  helper.cpp  id3_de_unsynchronization_eager_filter.cpp  inspector.cpp  internal_output_operators.h  output_operators.cpp  query.cpp  reader.cpp  type.cpp  type_definition.cpp  type_definition.h  type_repository.cpp  xml_helper.h
source/common/source/getters/: ebml.cpp  helpers.cpp  helpers.h
source/common/source/type_definition/: add.cpp  add.h  add_tag.cpp  add_tag.h  alternative.cpp  alternative.h  and.cpp  and.h  apply_enumeration.cpp  apply_enumeration.h  array.cpp  array.h  bits_interpretation.cpp  bits_interpretation.h  cast.cpp  cast.h  data_reference.cpp  data_reference.h  data_type.h  data_verification.h  divide.cpp  divide.h  enumeration.cpp  enumeration.h  equals.cpp  equals.h  expression.cpp  expression.h  field.cpp  field.h  field_reference.cpp  field_reference.h  forward.cpp  forward.h  function_call.cpp  function_call.h  helper.cpp  helper.h  interpretation.h  length.cpp  (+34 more)
source/common/test/: get_ascii.cpp  get_buffer.cpp  get_id3.cpp  get_iso_iec_10646_1_1993.cpp  get_iso_iec_8859_1_1998.cpp  get_signed_integer.cpp  get_unsigned_integer.cpp  read_bits.cpp  test.cpp  tests.h
source/inspectors/: meson.build
source/inspectors/ape/: apeinspector.cpp
source/inspectors/asf/: asfinspector.cpp
source/inspectors/flac/: flacinspector.cpp
source/inspectors/general/: generalinspector.cpp
source/inspectors/id3/: id3inspector.cpp
source/inspectors/mpeg/: mpeginspector.cpp
source/inspectors/riff/: riffinspector.cpp
source/inspectors/vorbis/: vorbisinspector.cpp
subprojects/: .gitignore  string_cast.wrap  xml_parser.wrap  xml_puny_dom.wrap
test/: .gitignore  Makefile  test.cpp  test.py  tests.xml
tools/: integration_tests.py  meson.build  remove_empty_lines.py  to_binary.py  xslt.py
vorbis/: Makefile  vorbisinspector.cpp
wave/: Makefile  waveinspector.cpp
(+634 files in other folders)
