all_inspectors = []

apeinspector_executable = executable(
  'apeinspector',
  sources: ['ape/apeinspector.cpp'],
  dependencies: [
    common_library_dependency,
    string_cast_dependency,
    xml_parser_dependency,
    xml_puny_dom_dependency
  ]
)
all_inspectors += apeinspector_executable

asfinspector_executable = executable(
  'asfinspector',
  sources: ['asf/asfinspector.cpp'],
  dependencies: [
    common_library_dependency,
    string_cast_dependency,
    xml_parser_dependency,
    xml_puny_dom_dependency
  ]
)
all_inspectors += asfinspector_executable

flacinspector_executable = executable(
  'flacinspector',
  sources: ['flac/flacinspector.cpp'],
  dependencies: [
    common_library_dependency,
    string_cast_dependency,
    xml_parser_dependency,
    xml_puny_dom_dependency
  ]
)
all_inspectors += flacinspector_executable

generalinspector_executable = executable(
  'generalinspector',
  sources: ['general/generalinspector.cpp'],
  dependencies: [
    common_library_dependency,
    string_cast_dependency,
    xml_parser_dependency,
    xml_puny_dom_dependency
  ]
)
all_inspectors += generalinspector_executable

id3inspector_executable = executable(
  'id3inspector',
  sources: ['id3/id3inspector.cpp'],
  dependencies: [
    common_library_dependency,
    string_cast_dependency,
    xml_parser_dependency,
    xml_puny_dom_dependency
  ]
)
all_inspectors += id3inspector_executable

mpeginspector_executable = executable(
  'mpeginspector',
  sources: ['mpeg/mpeginspector.cpp'],
  dependencies: [
    common_library_dependency,
    string_cast_dependency,
    xml_parser_dependency,
    xml_puny_dom_dependency
  ]
)
all_inspectors += mpeginspector_executable

riffinspector_executable = executable(
  'riffinspector',
  sources: ['riff/riffinspector.cpp'],
  dependencies: [
    common_library_dependency,
    string_cast_dependency,
    xml_parser_dependency,
    xml_puny_dom_dependency
  ]
)
all_inspectors += riffinspector_executable

vorbisinspector_executable = executable(
  'vorbisinspector',
  sources: ['vorbis/vorbisinspector.cpp'],
  dependencies: [
    common_library_dependency,
    string_cast_dependency,
    xml_parser_dependency,
    xml_puny_dom_dependency
  ]
)
all_inspectors += vorbisinspector_executable
